# gemini-mcp

./: README.md  pyproject.toml
src/mcp_client/: client.py  client_function_calling.py
src/mcp_server/: server.py
